# node-agent

./: Cargo.toml  doc.md
src/: collector.rs  main.rs  models.rs
src/http/: client.rs
src/inventory/: hostname.rs  machine_id.rs  mod.rs  serial.rs
src/metrics/: cpu.rs  memory.rs  uptime.rs
